# databricks-ehr-integration-core

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  databricks.yml  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release-publish.yml
docs/: architecture.md  databricks-validation.md  getting-started.md  index.md
examples/: sepsis_risk_writeback.py  sepsis_scoring.py  synthetic_patients.py
resources/: jobs.yml  pipelines.yml
specs/capabilities/: pypi-publishing.capability.yaml
specs/contracts/workflows/: pypi-publish.contract.yaml
specs/features/release/: publish-package.feature
specs/fixtures/release/: pypi-publish-success.json
specs/journeys/: publish-python-package.md
specs/models/: README.md
specs/models/release/: package-release.lifecycle.yaml  package-release.model.yaml
specs/personas/: release-maintainer.md
specs/stories/release/: publish-package-to-pypi.md
src/ehr_writeback/: __init__.py
src/ehr_writeback/core/: models.py  orchestrator.py  ports.py
src/ehr_writeback/infrastructure/: dead_letter.py  delta_store.py  idempotency.py
src/ehr_writeback/pipelines/: execute_writeback_batch.py  reprocess_dead_letters.py  setup_demo_environment.py  validate_demo_run.py  (+1 more)
terraform/: main.tf  networking.tf  variables.tf
tests/integration/: test_epic_fhir_adapter.py  test_generic_fhir_hapi.py
tests/unit/: test_fhir_resource_building.py  test_models.py  test_orchestrator.py
(+11 files in other folders)
